feat: [KAN-62] swagger api
